--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,7 +66,9 @@ optional = true
 
 [dev-dependencies]
 serde_norway = "0.9"
+serde_json = "1.0"
 tokio = { version = "1", features = ["macros"] }
+toml = "0.8"
 
 [[bin]]
 name = "codegen"
